--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
             </div>
 
 <!-- Modal -->
-  <div class="modal fade" id="addTaskForm" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="addTaskForm" tabindex="-1" aria-labelledby="taskFormLabel" aria-hidden="true">
     <div class="modal-dialog small">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Добавить заявку</h5>
+          <h5 class="modal-title" id="taskFormLabel">Добавить заявку</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -81,6 +81,8 @@
       </div>
     </div>
   </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
